examples/custom_attribute/tests/compile-fail/syntax_error.rs
use custom_attribute::custom_attr;

#[custom_attr(foo: false)]
mod single_attr {}
